--- a/doublekit-oms-starter/src/main/resources/application-dev.properties
+++ b/doublekit-oms-starter/src/main/resources/application-dev.properties
@@ -9,7 +9,7 @@ server.port=8082
 
 #dal config for mysql jdbc
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://172.10.1.10:3306/darth_boss?characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+jdbc.url=jdbc:mysql://172.10.1.10:3306/darth_oms?characterEncoding=utf8&useSSL=false&serverTimezone=UTC
 jdbc.username=root
 jdbc.password=darth2020
 
