--- a/doublekit-oms-server/pom.xml
+++ b/doublekit-oms-server/pom.xml
@@ -52,14 +52,15 @@
             <artifactId>doublekit-member-api</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.doublekit</groupId>
-            <artifactId>doublekit-tenant-api</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
+
         <dependency>
             <groupId>com.doublekit</groupId>
             <artifactId>doublekit-product-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.doublekit</groupId>
+            <artifactId>doublekit-tenant-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -102,6 +103,7 @@
             <artifactId>doublekit-promotion-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <!--其他引入-->
         <!--其他引入-->
         <dependency>
             <groupId>com.doublekit</groupId>
