--- a/tiklab-oms-starter/pom.xml
+++ b/tiklab-oms-starter/pom.xml
@@ -43,6 +43,12 @@
             <artifactId>tiklab-oms-server</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.tiklab</groupId>
+            <artifactId>tiklab-iam-server</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
