--- a/tiklab-oms-starter/pom.xml
+++ b/tiklab-oms-starter/pom.xml
@@ -40,6 +40,11 @@
         </dependency>
         <dependency>
             <groupId>com.tiklab</groupId>
+            <artifactId>tiklab-licence-spring-boot-starter</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tiklab</groupId>
             <artifactId>tiklab-oms-server</artifactId>
             <version>${project.version}</version>
         </dependency>
