--- a/tiklab-oms-starter/pom.xml
+++ b/tiklab-oms-starter/pom.xml
@@ -62,6 +62,11 @@
         </dependency>
         <dependency>
             <groupId>com.tiklab</groupId>
+            <artifactId>tiklab-eam-saas-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tiklab</groupId>
             <artifactId>tiklab-iam-client</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
