--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.tiklab</groupId>
+        <groupId> net.tiklab</groupId>
         <artifactId>tiklab-dependencies</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <groupId>com.tiklab</groupId>
+    <groupId> net.tiklab</groupId>
     <artifactId>tiklab-oms</artifactId>
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
@@ -25,12 +25,12 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.tiklab</groupId>
+                <groupId> net.tiklab</groupId>
                 <artifactId>tiklab-dfs-api</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
-                <groupId>com.tiklab</groupId>
+                <groupId> net.tiklab</groupId>
                 <artifactId>tiklab-dss-spring-boot-starter</artifactId>
                 <version>${project.version}</version>
             </dependency>
