--- a/tiklab-oms-api/pom.xml
+++ b/tiklab-oms-api/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.tiklab</groupId>
+        <groupId> net.tiklab</groupId>
         <artifactId>tiklab-oms</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
@@ -15,17 +15,17 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-core</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-postin-annotation</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-beans-annotation</artifactId>
             <version>${project.version}</version>
         </dependency>
