--- a/tiklab-oms-server/pom.xml
+++ b/tiklab-oms-server/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.tiklab</groupId>
+        <groupId> net.tiklab</groupId>
         <artifactId>tiklab-oms</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
@@ -39,33 +39,33 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-postin-client</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-codegen-core</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <!--fcc基础组件依赖-->
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-user-spring-boot-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-privilege-spring-boot-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-message-spring-boot-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-toolkit-spring-boot-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -73,81 +73,81 @@
 
         <!--ocs依赖-->
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-member-api</artifactId>
             <version>${project.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-product-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-tenant-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-subscribe-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-doc-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-dss-spring-boot-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-sns-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-statistics-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-download-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-ssm-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-promotion-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <!--其他引入-->
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-oms-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-dfs-spring-boot-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-dcs-spring-boot-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-dss-spring-boot-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
