--- a/tiklab-oms-starter/pom.xml
+++ b/tiklab-oms-starter/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.tiklab</groupId>
+        <groupId> net.tiklab</groupId>
         <artifactId>tiklab-oms</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
@@ -28,28 +28,28 @@
         </dependency>
         <!--platform-->
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-gateway-spring-boot-starter</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <!--pcs-->
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-eam-spring-boot-starter</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-licence-spring-boot-starter</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-oms-server</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.tiklab</groupId>
+            <groupId> net.tiklab</groupId>
             <artifactId>tiklab-rpc-spring-boot-starter</artifactId>
             <version>1.0.0-SNAPSHOT</version>
             <scope>compile</scope>
@@ -93,7 +93,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <!--<includes>
-                        <include>test.com.tiklab.product.MathTest03</include>
+                        <include>test. net.tiklab.product.MathTest03</include>
                     </includes>-->
                     <skip>false</skip>
                 </configuration>
