--- a/tiklab-oms-api/pom.xml
+++ b/tiklab-oms-api/pom.xml
@@ -26,7 +26,7 @@
         </dependency>
         <dependency>
             <groupId> net.tiklab</groupId>
-            <artifactId>tiklab-beans-annotation</artifactId>
+            <artifactId>tiklab-tks-annotation</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
