--- a/tiklab-oms-server/pom.xml
+++ b/tiklab-oms-server/pom.xml
@@ -115,7 +115,7 @@
         </dependency>
         <dependency>
             <groupId> net.tiklab</groupId>
-            <artifactId>tiklab-download-api</artifactId>
+            <artifactId>tiklab-updownload-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -150,6 +150,12 @@
             <groupId> net.tiklab</groupId>
             <artifactId>tiklab-dss-spring-boot-starter</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <!--FTP包-->
+        <dependency>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+            <version>3.5</version>
         </dependency>
     </dependencies>
 
