--- a/tiklab-oms-server/pom.xml
+++ b/tiklab-oms-server/pom.xml
@@ -157,6 +157,13 @@
             <artifactId>commons-net</artifactId>
             <version>3.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>net.tiklab</groupId>
+            <artifactId>tiklab-message-spring-boot-starter</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
