--- a/tiklab-xpack-server/src/test/resources/application.properties
+++ b/tiklab-xpack-server/src/test/resources/application.properties
@@ -1,3 +1,3 @@
 #code generator config
 codegen.moudle.server.path=${user.dir}
-codegen.moudle.api.path=${user.dir}/../tiklab-oms-api
+codegen.moudle.api.path=${user.dir}/../tiklab-xpack-api
