--- a/tiklab-xpack-api/pom.xml
+++ b/tiklab-xpack-api/pom.xml
@@ -34,6 +34,10 @@
             <artifactId>tiklab-user-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
