--- a/tiklab-xpack-server/pom.xml
+++ b/tiklab-xpack-server/pom.xml
@@ -174,6 +174,11 @@
             <version>1.0.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.9</version>
+        </dependency>
 
     </dependencies>
 
