--- a/tiklab-xpack-server/pom.xml
+++ b/tiklab-xpack-server/pom.xml
@@ -101,6 +101,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>net.tiklab</groupId>
+            <artifactId>tiklab-eam-spring-boot-starter</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId> net.tiklab</groupId>
             <artifactId>tiklab-sns-api</artifactId>
             <version>${project.version}</version>
