--- a/tiklab-xpack-starter/pom.xml
+++ b/tiklab-xpack-starter/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>tiklab-security-spring-boot-starter</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>ai.active</groupId>
+            <artifactId>webhook-sdk</artifactId>
+            <version>1.0.7</version>
+        </dependency>
     </dependencies>
 
     <profiles>
